# Image-Studio-Mixclean

./: .gitignore  ADMIN_WEB_UI_IMPROVEMENT_PLAN.md  CAI]  DATA_PIPELINE_PLAN.md  LANGUAGE_MAPPING.md  NOTICE  OPENMOJI_IMPORT_GUIDE.md  README.md  STICKER_AUDIT_CHECKLIST.md  STICKER_COPYRIGHT_GUIDE.md  UI_IMPROVEMENT_PLAN.md  app-ads.txt  audit_quickedit_missing.py  build.gradle.kts  build_app.txt  build_errors.txt  build_errors_app.txt  build_log.txt  build_out.txt  clean_10_phase.md  compress_webp.py  dependencies.txt  extract_objects.py  fix_plan.md  gradle.properties  improve.md  inpaint_assets_clean.py  log.txt  module_ecomerce.docx  nâng cấp shapetool chuẩn word.md  portrait  settings.gradle.kts  text_box_fixes_plan.md  translation_report.json  tuto.md
.agents/: AGENTS.md
.claude/: settings.local.json
Plan/: main_plan.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md
QuickEdit-Photo-Editor-main/: README.md  build.gradle.kts  settings.gradle.kts
QuickEdit-Photo-Editor-main/app/: build.gradle.kts
QuickEdit-Photo-Editor-main/gradle/: libs.versions.toml
QuickEdit-Photo-Editor-main/quickedit/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
admin_tools/: EVALUATION_AND_PLAN.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
admin_tools/src/main/: AndroidManifest.xml
admin_web/: .gitignore  check-db.js  check-template.js  next.config.ts  package-lock.json  package.json  supabase_schema.sql  supabase_schema_complete.sql  vitest.config.ts
admin_web/scripts/: bulk-delete-folder.mjs  check-portal-layer.mjs  classify-sticker-folder.mjs  convert-folder-to-webp.mjs  count-assets.mjs  dedupe-sticker-visual.mjs  export-sticker-audit.mjs  import-openmoji-stickers.mjs  list-placeholders.mjs  migrate-validate-templates.ts  migration_add_category_to_assets.sql  migration_add_environment_to_templates.sql  openmoji-decor-allowlist.json  openmoji-reaction-allowlist.json  run-fonts-migration.mjs  seed_templates.mjs  sticker-image-utils.mjs  sync-default-categories.mjs  sync-fonts-from-storage.mjs  sync-studio-assets.mjs  test-insert-folder.mjs  test-query-counts.mjs  test-query.mjs
admin_web/scripts/migrations/: add_category_slug.sql
admin_web/src/: middleware.ts
admin_web/src/app/: globals.css  layout.tsx
android-compose-modnet/: .gitignore  README.md  improve.md  settings.gradle.kts
android-compose-modnet/app/: build.gradle.kts
android-compose-modnet/app/src/main/cpp/: CMakeLists.txt  mask_fusion.cpp  onnx_decryptor.cpp
app/: build.gradle.kts  google-services.json  proguard-rules.pro  selfie_segmenter.tflite
app/src/main/cpp/: CMakeLists.txt  portrait_blend.cpp
app/src/main/cpp/bg_refiner/: bg_refiner.cpp  bg_refiner.h  mask_fusion.cpp  native_refiner.cpp  onnx_decryptor.cpp
app/src/main/cpp/portrait/: image_processor.cpp  image_processor.h  native_portrait.cpp  neon_kernels.cpp  neon_kernels.h
build-tools/: build_aab_release.bat  bump_version.bat  bump_version.py  clean_build_cache.bat  encrypt_model.py  export_source_code.bat  export_source_code.py  fix_elf_alignment.py  git_push_helper.bat  install_release_aab.bat  live_logcat_viewer.bat  one_click_release.bat  publish_play_store.bat  temp_device.json
build-tools/logs/: logcat_error_20260523_204112.txt  logcat_error_20260523_204241.txt
conversation/: admin_tools_new_plan.md
core-ad/: build.gradle.kts
core-data/: build.gradle.kts
core-domain/: build.gradle.kts
core-ui/: build.gradle.kts
core-util/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plans/: admin_web_plan.md  phase_0_web_admin.md
scratch/: audit_app_strings.py  check_alignment.py  clean_module_names.py  cleanup_redundant_strings.py  fix_all_strings.py  fix_apostrophes.py  fix_double_escapes.py  fix_escaping.py  model_head.hex  sync_app_translations.py  sync_qe_translations.py  test_fix.py  update_dock_strings.py
studio/: build.gradle.kts
studio_edit/: TEXT_BOX_FIX_PLAN.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
studio_edit/docs/: LABEL_DOCUMENT_ARCHITECTURE.md  LABEL_IMPROVEMENT_PLAN.md
(+1002 files in other folders)
